--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><title>Web Dev demos</title></head><body> <h1>Hello, World!</h1> <script src="/carleton-web-dev.7c54e88d.js"></script> </body></html>
+<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><title>Web Dev demos</title></head><body> <h1>Hello, World!</h1> <script src="carleton-web-dev.7c54e88d.js"></script> </body></html>
