Adeed React todo example

--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,19 @@
     <head>
         <meta charset="utf-8" />
         <title>Web Dev demos</title>
+        <link rel="stylesheet" type="text/css" href="index.css" />
     </head>
     <body>
-        <h1>Hello, World!</h1>
+        <div class="main-menu">
+            <h1 class="main-menu-header">
+                Available demos
+            </h1>
+            <ul class="main-menu-list">
+                <li>
+                    <a href="react-todo/index.html">React Todo list</a>
+                </li>
+            </ul>
+        </div>
         <script src="./index.js"></script>
     </body>
 </html>
