Fix the pathing problems with github pages

--- a/src/react-todo/index.html
+++ b/src/react-todo/index.html
@@ -6,6 +6,6 @@
     </head>
     <body>
     <section class="todoapp"></section>
-    <script src="index.jsx"></script>
+    <script src="./index.jsx"></script>
     </body>
 </html>
