Added completed assignment 1

--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,9 @@
                 <li>
                     <a href="react-todo/index.html">React Todo list</a>
                 </li>
+                <li>
+                    <a href="react-course-website/index.html">React course website - Assigment 1</a>
+                </li>
             </ul>
         </div>
         <script src="./index.js"></script>
