--- a/src/react-todo/index.html
+++ b/src/react-todo/index.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset="utf-8">
         <title>React • Todo List</title>
+        <link href="https://cdn.jsdelivr.net/npm/todomvc-common@1.0.5/base.css" rel="stylesheet" />
+        <link href="https://cdn.jsdelivr.net/npm/todomvc-app-css@2.3.0/index.css" rel="stylesheet" />
     </head>
     <body>
     <section class="todoapp"></section>
