Added web components TODO example app

--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,9 @@
                     <a href="react-course-website/index.html">React course website - Assigment 1</a>
                 </li>
                 <li id="documentation-link" />
+                <li>
+                    <a href="wc-todo/index.html">Web Component Todo list</a>
+                </li>
             </ul>
         </div>
         <script src="./index.js"></script>
