Added the base for a web component course website

--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,9 @@
                 <li>
                     <a href="wc-todo/index.html">Web Component Todo list</a>
                 </li>
+                <li>
+                    <a href="wc-course-website/index.html">Web Component course website - Assignment 2</a>
+                </li>
             </ul>
         </div>
         <script src="./index.js"></script>
