Clean the code and add the new modals

--- a/src/wc-course-website/pages/assignments/index.html
+++ b/src/wc-course-website/pages/assignments/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
   <include src="wc-course-website/components/navbar/index.html"></include>
-  <include src="wc-course-website/components/tutorial/index.html"></include>
-  <include src="wc-course-website/components/tutorials/index.html"></include>
+  <include src="wc-course-website/components/assignment/index.html"></include>
+  <include src="wc-course-website/components/assignments/index.html"></include>
   <include src="wc-course-website/components/activities/index.html"></include>
   <include src="wc-course-website/components/collapsibleContent/index.html"></include>
   <include src="wc-course-website/components/collapsibleMenu/index.html"></include>
@@ -28,10 +28,10 @@
                   <li>
                     <a href="/wc-course-website/index.html">COMP2406</a>
                   </li>
-                  <li class="is-active"><a>Tutorials</a></li>
+                  <li class="is-active"><a>Assignments</a></li>
                 </ul>
               </nav>
-              <tutorials-list></tutorials-list>
+              <assignments-list></assignments-list>
             </article>
           </div>
         </div>
@@ -49,22 +49,22 @@
     <div class="content has-text-centered">
       <div class="columns">
         <div class="column">
-          <a href="/wc-course-website/lectures/index.html">
+          <a href="/wc-course-website/pages/lectures/index.html">
             Lectures
           </a>
         </div>
         <div class="column">
-          <a href="/wc-course-website/tutorials/index.html">
+          <a href="/wc-course-website/pages/tutorials/index.html">
             Tutorials
           </a>
         </div>
         <div class="column">
-          <a href="/wc-course-website/assignments/index.html">
+          <a href="/wc-course-website/pages/assignments/index.html">
             Assignments
           </a>
         </div>
         <div class="column">
-          <a href="/wc-course-website/forums/index.html">
+          <a href="/wc-course-website/pages/forums/index.html">
             Discussion boards
           </a>
         </div>
@@ -74,7 +74,7 @@
       </p>
     </div>
   </footer>
-  <script src="./index.js"></script>
+  <script src="index.js"></script>
   <script src="https://use.fontawesome.com/releases/v5.13.1/js/all.js" data-auto-replace-svg="nest" data-carry></script>
 </body>
 </html>
