--- a/src/wc-course-website/pages/assignment/index.html
+++ b/src/wc-course-website/pages/assignment/index.html
@@ -28,7 +28,7 @@
                   <a href="/wc-course-website/index.html">COMP2406</a>
                 </li>
                 <li>
-                  <a href="/wc-course-website/assignments/index.html">Assignments</a>
+                  <a href="/wc-course-website/pages/assignments/index.html">Assignments</a>
                 </li>
                 <li class="is-active">
                   <a>
@@ -37,7 +37,7 @@
                 </li>
               </ul>
             </nav>
-            <div is="single-assignment" delete-path="/wc-course-website/assignments/index.html"></div>
+            <div is="single-assignment" delete-path="/wc-course-website/pages/assignments/index.html"></div>
           </article>
         </div>
       </div>
@@ -55,22 +55,22 @@
   <div class="content has-text-centered">
     <div class="columns">
       <div class="column">
-        <a href="/wc-course-website/lectures/index.html">
+        <a href="/wc-course-website/pages/lectures/index.html">
           Lectures
         </a>
       </div>
       <div class="column">
-        <a href="/wc-course-website/tutorials/index.html">
+        <a href="/wc-course-website/pages/tutorials/index.html">
           Tutorials
         </a>
       </div>
       <div class="column">
-        <a href="/wc-course-website/assignments/index.html">
+        <a href="/wc-course-website/pages/assignments/index.html">
           Assignments
         </a>
       </div>
       <div class="column">
-        <a href="/wc-course-website/forums/index.html">
+        <a href="/wc-course-website/pages/forums/index.html">
           Discussion boards
         </a>
       </div>
@@ -80,7 +80,7 @@
     </p>
   </div>
 </footer>
-<script src="./index.js"></script>
+<script src="index.js"></script>
 <script src="https://use.fontawesome.com/releases/v5.13.1/js/all.js" data-auto-replace-svg="nest" data-carry></script>
 </body>
 </html>
