--- a/src/wc-course-website/pages/lecture/index.html
+++ b/src/wc-course-website/pages/lecture/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
 <include src="wc-course-website/components/navbar/index.html"></include>
+<include src="wc-course-website/components/lecture/index.html"></include>
 <include src="wc-course-website/components/activities/index.html"></include>
-<include src="wc-course-website/components/forumTopic/index.html"></include>
 <include src="wc-course-website/components/collapsibleContent/index.html"></include>
 <include src="wc-course-website/components/collapsibleMenu/index.html"></include>
 <header>
@@ -28,21 +28,16 @@
                   <a href="/wc-course-website/index.html">COMP2406</a>
                 </li>
                 <li>
-                  <a href="/wc-course-website/forums/index.html">Discussion boards</a>
-                </li>
-                <li>
-                  <content-link source="forums">
-                    <content-name source="forums"></content-name>
-                  </content-link>
+                  <a href="/wc-course-website/pages/lectures/index.html">Lectures</a>
                 </li>
                 <li class="is-active">
                   <a>
-                    <content-name source="topics"></content-name>
+                    <content-name source="lectures"></content-name>
                   </a>
                 </li>
               </ul>
             </nav>
-            <forum-topic></forum-topic>
+            <div is="single-lecture" delete-path="/wc-course-website/pages/lectures/index.html"></div>
           </article>
         </div>
       </div>
@@ -60,22 +55,22 @@
   <div class="content has-text-centered">
     <div class="columns">
       <div class="column">
-        <a href="/wc-course-website/lectures/index.html">
+        <a href="/wc-course-website/pages/lectures/index.html">
           Lectures
         </a>
       </div>
       <div class="column">
-        <a href="/wc-course-website/tutorials/index.html">
+        <a href="/wc-course-website/pages/tutorials/index.html">
           Tutorials
         </a>
       </div>
       <div class="column">
-        <a href="/wc-course-website/assignments/index.html">
+        <a href="/wc-course-website/pages/assignments/index.html">
           Assignments
         </a>
       </div>
       <div class="column">
-        <a href="/wc-course-website/forums/index.html">
+        <a href="/wc-course-website/pages/forums/index.html">
           Discussion boards
         </a>
       </div>
@@ -85,7 +80,7 @@
     </p>
   </div>
 </footer>
-<script src="./index.js"></script>
+<script src="index.js"></script>
 <script src="https://use.fontawesome.com/releases/v5.13.1/js/all.js" data-auto-replace-svg="nest" data-carry></script>
 </body>
 </html>
