Try using type="module" to fix some of the issues

--- a/src/wc-course-website/index.html
+++ b/src/wc-course-website/index.html
@@ -169,6 +169,6 @@
     <a href="/wc-course-website/components/tutorials/index.html"></a>
   </div>
   <script src="./index.js"></script>
-  <script src="https://use.fontawesome.com/releases/v5.13.1/js/all.js" data-auto-replace-svg="nest" data-carry></script>
+  <script type="module" src="https://use.fontawesome.com/releases/v5.13.1/js/all.js" data-auto-replace-svg="nest" data-carry></script>
 </body>
 </html>
