--- a/src/wc-course-website/pages/forum/index.html
+++ b/src/wc-course-website/pages/forum/index.html
@@ -80,7 +80,7 @@
     </p>
   </div>
 </footer>
-<script src="index.js"></script>
+<script type="module" src="index.js"></script>
 <script src="https://use.fontawesome.com/releases/v5.13.1/js/all.js" data-auto-replace-svg="nest" data-carry></script>
 </body>
 </html>
