Added a first iteration of the project.
There is no "ecosystem" yet, but all the basics are there to be able to create a todo app that works surprisingly well. The diffing algorithm has room for improvements, but for a first iteration, I am quite surprised of what I achieved!

--- a/src/index.html
+++ b/src/index.html
@@ -27,6 +27,9 @@
                 <li id="documentation-wc-link" />
                 <li id="todo-java-link" />
                 <li id="course-website-java-link" />
+                <li>
+                    <a href="project/demo/index.html">Project Demo - Todo List</a>
+                </li>
             </ul>
         </div>
         <script src="./index.js"></script>
