Added executed benchmarks.
To reproduce, copy the `frameworks` folder into a fork or clone of https://github.com/krausest/js-framework-benchmark

--- a/src/index.html
+++ b/src/index.html
@@ -30,6 +30,9 @@
                 <li>
                     <a href="project/demo/index.html">Project Demo - Todo List</a>
                 </li>
+                <li>
+                    <a href="project/benchmark-data/table.html">Project - Benchmarks (Ran on my own machine)</a>
+                </li>
             </ul>
         </div>
         <script src="./index.js"></script>
