Add the project documentation and hope it builds

--- a/src/project/demo/index.html
+++ b/src/project/demo/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" data-framework="react">
+<html lang="en" data-framework="VirtualDOM">
 <head>
   <meta charset="utf-8">
   <title>Project • Todo List</title>
