--- a/project/demo/index.html
+++ b/project/demo/index.html
@@ -1,4 +1,4 @@
-<!doctype html><html lang="en" data-framework="react"><head><meta charset="utf-8"><title>Project • Todo List</title><link href="https://cdn.jsdelivr.net/npm/todomvc-common@1.0.5/base.css" rel="stylesheet"><link href="https://cdn.jsdelivr.net/npm/todomvc-app-css@2.3.0/index.css" rel="stylesheet"></head><body>
+<!doctype html><html lang="en" data-framework="VirtualDOM"><head><meta charset="utf-8"><title>Project • Todo List</title><link href="https://cdn.jsdelivr.net/npm/todomvc-common@1.0.5/base.css" rel="stylesheet"><link href="https://cdn.jsdelivr.net/npm/todomvc-app-css@2.3.0/index.css" rel="stylesheet"></head><body>
 <section class="todoapp"></section>
-<script src="/carleton-web-dev/demo.75a1b98a.js"></script>
+<script src="/carleton-web-dev/demo.f994f916.js"></script>
 </body></html>
