--- a/src/project/benchmark-data/frameworks/non-keyed/projectRecursive/index.html
+++ b/src/project/benchmark-data/frameworks/non-keyed/projectRecursive/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>React non-keyed</title>
+  <title>Project recursive non-keyed</title>
   <link href="/css/currentStyle.css" rel="stylesheet" />
 </head>
 
