Repair the docs link

--- a/src/index.html
+++ b/src/index.html
@@ -84,7 +84,7 @@
                 anchor.href = 'project/docs/index.html';
                 anchor.innerText = 'Project documentation';
 
-                document.querySelector('#docs').appendChild(anchor);
+                document.querySelector('#project-docs-link').appendChild(anchor);
             })();
         </script>
     </body>
