Added the slide deck for the presentation

--- a/src/index.html
+++ b/src/index.html
@@ -32,6 +32,9 @@
                 </li>
                 <li id="project-benchmarks-link" />
                 <li id="project-docs-link" />
+                <li>
+                    <a href="slides/index.html">Presentation slides</a>
+                </li>
             </ul>
         </div>
         <script src="./index.js"></script>
